# wlr-desktop

./: Cargo.toml
src/: globals.rs  main.rs  nullable.rs  prelude.rs  window.rs
src/window/: xdg_shell.rs
src/window/xdg_shell/: cursor.rs  frame.rs  globals.rs  window.rs
