[package]
name = "wlr-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cosmic-text = "0.5.2"
rgb = { version = "0.8.34", features = ["argb"] }
smithay-client-toolkit = "0.16.0"
wayland-client = "0.29.5"
wayland-cursor = "0.29.5"
wayland-protocols = { version = "0.29.5", features = ["client"] }
